JBEHAVE-1081:  Updated conf and docs post migration from Codehaus.

--- a/distribution/src/main/site/content/download.html
+++ b/distribution/src/main/site/content/download.html
@@ -9,16 +9,13 @@
 <h2>Stable releases</h2>
 
 <p>Stable releases can be found on the <a
-	href="https://nexus.codehaus.org/content/repositories/releases/org/jbehave/web/">Codehaus
-Nexus Repository Manager</a> (which is synched with the <a
-	href="http://repo1.maven.org/maven2/org/jbehave/web">Central Maven
-Repository</a>).</p>
+	href="https://oss.sonatype.org/content/repositories/releases/org/jbehave/web/">Sonatype Nexus Repository Manager</a> (which is synched with Maven Central
+Repository).</p>
 
 <h2 id="snapshot">Latest Snapshots</h2>
 
 <p>The snapshot builds of JBehave can be found on the <a
-    href="https://nexus.codehaus.org/content/repositories/snapshots/org/jbehave/web">Codehaus
-Nexus Repository Manager</a>. Be sure to choose the snapshot with the latest
+    href="https://oss.sonatype.org/content/repositories/snapshots/org/jbehave/web">Sonatype Nexus Repository Manager</a>. Be sure to choose the snapshot with the latest
 version and the filename with the latest timestamp.</p>
 
 <h2 id="maven">POM Artifacts</h2>
