--- a/distribution/src/main/site/content/source-repository.html
+++ b/distribution/src/main/site/content/source-repository.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+
 <h2>Overview</h2>
 
 <p>JBehave uses <a href="http://git-scm.com">Git</a> to manage its source code.</p>
@@ -14,30 +15,23 @@
 
 <p>Git allows web access:</p>
 
-<p><a href="http://git.codehaus.org/gitweb.cgi?p=jbehave-web.git">http://git.codehaus.org/gitweb.cgi?p=jbehave-web.git</a></p>
+<p><a href="http://github.com/jbehave/jbehave-web">http://github.com/jbehave/jbehave-web</a></p>
 
 <h2>Anonymous Access</h2>
 
-<pre>git clone git://git.codehaus.org/jbehave-web.git</pre>
+<pre>git clone git://github.com/jbehave/jbehave-web.git</pre>
 
 <h2>Committer Access</h2>
 
-<pre>git clone ssh://git@git.codehaus.org/jbehave-web.git</pre>
-
-<p>Committers will need to upload their public via <a href="http://xircles.codehaus.org/my/details">Xircles</a>.</p>
+<pre>git clone ssh://git@github.com/jbehave/jbehave-web.git</pre>
 
 <h2>Access through a proxy</h2>
 
 <p>Git support HTTP protocol for cloning, which normally is allowed in corporate firewalls</p>
 
-<pre>git clone http://git.codehaus.org/jbehave-web.git</pre>
+<pre>git clone https://github.com/jbehave/jbehave-web.git</pre>
 
 <p>You may need to set <b>http.proxy</b> via <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</p>
-
-<h2>GitHub clones</h2>
-
-<p>JBehave repos are replicated on <a href="https://github.com/jbehave/jbehave-web">GitHub JBehave Web</a>, which some users find
-easier to manage git repos.  GitHub also tends to provide web-browsing URLs which are eaasier on the eye.</p>
 
 </body>
 
