Updated release notes.

--- a/distribution/src/main/site/content/release-notes.html
+++ b/distribution/src/main/site/content/release-notes.html
@@ -5,6 +5,63 @@
 </head>
 <body>
 
+<h1>JBehave Web - Version 4.0</h1>
+
+
+<h2>        Bug
+</h2>
+<ul>
+    <li>[<a href='https://jbehave.atlassian.net/browse/JBEHAVE-941'>JBEHAVE-941</a>] -         Not able to upgrade to selenium-java v2.34.0 or above
+    </li>
+    <li>[<a href='https://jbehave.atlassian.net/browse/JBEHAVE-1132'>JBEHAVE-1132</a>] -         Multi-threading issue with FluentSelenium
+    </li>
+</ul>
+
+<h2>        New Feature
+</h2>
+<ul>
+    <li>[<a href='https://jbehave.atlassian.net/browse/JBEHAVE-968'>JBEHAVE-968</a>] -         Allow Web Runner to view and run stories from a remote wiki
+    </li>
+    <li>[<a href='https://jbehave.atlassian.net/browse/JBEHAVE-1214'>JBEHAVE-1214</a>] -         Support Selenium 3
+    </li>
+    <li>[<a href='https://jbehave.atlassian.net/browse/JBEHAVE-1216'>JBEHAVE-1216</a>] -         Support JBehave 4
+    </li>
+</ul>
+
+<h2>        Task
+</h2>
+<ul>
+    <li>[<a href='https://jbehave.atlassian.net/browse/JBEHAVE-881'>JBEHAVE-881</a>] -         Upgrade to Selenium 2.29.1
+    </li>
+    <li>[<a href='https://jbehave.atlassian.net/browse/JBEHAVE-882'>JBEHAVE-882</a>] -         Update Web Archetypes
+    </li>
+    <li>[<a href='https://jbehave.atlassian.net/browse/JBEHAVE-891'>JBEHAVE-891</a>] -         Upgrade Selenium version to 2.31.0
+    </li>
+    <li>[<a href='https://jbehave.atlassian.net/browse/JBEHAVE-914'>JBEHAVE-914</a>] -         Add support for Actions in WebDriverPage
+    </li>
+    <li>[<a href='https://jbehave.atlassian.net/browse/JBEHAVE-969'>JBEHAVE-969</a>] -         Upgrade Web Runner to Wicket 6
+    </li>
+    <li>[<a href='https://jbehave.atlassian.net/browse/JBEHAVE-1021'>JBEHAVE-1021</a>] -         Remove support for Selenium AndroidDriver
+    </li>
+    <li>[<a href='https://jbehave.atlassian.net/browse/JBEHAVE-1072'>JBEHAVE-1072</a>] -         Upgrade to Selenium 2.44.0
+    </li>
+</ul>
+
+<h2>        Improvement
+</h2>
+<ul>
+    <li>[<a href='https://jbehave.atlassian.net/browse/JBEHAVE-433'>JBEHAVE-433</a>] -         Screenshot should be taken on every example failure if a scenario has an example table
+    </li>
+    <li>[<a href='https://jbehave.atlassian.net/browse/JBEHAVE-885'>JBEHAVE-885</a>] -         Improve documentation on use of WebDriverProvider to prevent error &#39;WebDriver has not been found for this thread.&#39;
+    </li>
+    <li>[<a href='https://jbehave.atlassian.net/browse/JBEHAVE-935'>JBEHAVE-935</a>] -         Output Sauce session id in the format expected by the Sauce CI plugins
+    </li>
+    <li>[<a href='https://jbehave.atlassian.net/browse/JBEHAVE-939'>JBEHAVE-939</a>] -         Add support for PhantomJS to PropertyWebDriverProvider
+    </li>
+    <li>[<a href='https://jbehave.atlassian.net/browse/JBEHAVE-1052'>JBEHAVE-1052</a>] -         Upgrade Selenium version
+    </li>
+</ul>
+
 
 <h1>JBehave Web - Version 3.5.5 (Nov 25, 2012)</h1>
                                     
